--- a/C+++/Utilities/CDCompileResultMessageBox.xib
+++ b/C+++/Utilities/CDCompileResultMessageBox.xib
@@ -15,7 +15,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <visualEffectView blendingMode="behindWindow" material="appearanceBased" state="followsWindowActiveState" id="Hz6-mo-xeY">
+        <visualEffectView blendingMode="behindWindow" material="popover" state="active" id="Hz6-mo-xeY">
             <rect key="frame" x="0.0" y="0.0" width="180" height="180"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
